--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,7 +62,20 @@ a:hover {
     font-size: 1.75rem;
 }
 
+button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+}
+
+html {
+    height: 100%;
+    width:100%;
+}
+
 body {
+    height: 100%;
+    width:100%;
+    position: relative;
     background:#FFF;
     font-family: 'OpenSans', sans-serif;
     color:#332532;
@@ -80,7 +93,7 @@ section {
 
 /* ################################### HEADER ################################### */
 
-header {
+header, #header {
     width: 100%;
     height: 8rem;
     background:#332532;
@@ -296,19 +309,129 @@ form .inputbox .picfile {
     right:1.5rem;
 }
 
-form input[type=submit] {
+form input[type=submit], #send_position  {
     width: 100%;
     height: 8rem;
+    border: none;
     border-radius: 1rem;
+    font-family: 'Roboto', sans-serif;
     font-size: 3rem;
-    font-weight: 100;
+    font-weight: 600;
     margin: 2rem 0 9.5rem 0;
+    color:#FFF;
+    background:#332532;
+    border: 0.25rem solid #FFF;
+}
+
+form input[type=submit]:focus, #send_position:focus {
+    color:#332532;
+    background:#FFF;
+    border: 0.25rem solid #332532;
+}
+
+/* ################################### MAP ################################### */
+
+#map {
+    height: 100%;
+    width: 100%;
+}
+
+#header{
+    position: absolute;
+    top:0;
+    z-index: 1;
+}
+
+#header .navbar {
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content:space-between;
+    padding: 1rem;
+}
+
+#header .navbar select, #header .navbar input {
+    box-sizing: border-box;
+    height: 100%;
+    width: 25%;
+    padding: 1rem;
+    font-size: 1.75rem;
+    font-weight: 600;
+    color:#332532;
+    border: none;
+    margin: 0 0.25rem;
+}
+
+#header .navbar select:first-child {
+    border-radius: 1rem 0 0 1rem;
+}
+
+#header .navbar input:last-child {
+    border-radius: 0 1rem 1rem 0;
+}
+
+#header #result_search {
+    width: 90%;
+    height: auto;
+    margin: 2rem auto;
+}
+
+#header #result_search .searchresult {
+    width: 100%;
+    height:8rem;
+    font-size: 2.5rem;
+    text-align: left;
+    padding: 0 0 0 2rem;
+    color:#212121;
+    border-bottom:0.2rem solid #332532;
+    border-left:0.2rem solid #332532;
+    border-right:0.2rem solid #332532;
+    background:#FFF;
+}
+
+#header #result_search .searchresult:nth-child(even) {
+    background:#e6e6e6;
+}
+
+#header #result_search .searchresult:first-child {
+    border-radius: 1rem 1rem 0 0;
+    border-top:0.2rem solid #332532;
+}
+
+#header #result_search .searchresult:last-child {
+    border-radius: 0 0 1rem 1rem;
+}
+
+#header #result_search .searchresult:focus {
     color:#FFF;
     background:#332532;
 }
 
-form input[type=submit]:focus {
-    color:#332532;
-    background:#FFF;
-    border: 0.25rem solid #332532;
+/* ################################ CREATE :: MAP ################################ */
+
+#header h1 {
+    margin: 1rem 0 0.5rem 0;
+    color:#FFF;
+    text-align: center;
+    font-weight: 300;
+}
+
+#search_city {
+    box-sizing: border-box;
+    width: 90%;
+    height: 5rem;
+    margin: 0 5%;
+    padding: 1rem;
+    font-size: 2rem;
+    border:0.125rem solid #332532;
+    border-radius: 1rem;
+}
+
+#send_position {
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%); 
+    top: 105rem;
+    left:50%;
+    width: 90%;
+    z-index: 1;
 }
