--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -59,6 +59,10 @@ a {
     text-decoration: none;
 }
 
+a:focus {
+    color:#FF974F;
+}
+
 a:hover {
     cursor: pointer;
 }
@@ -73,21 +77,25 @@ button {
 }
 
 .lane-space-around {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
 }
 
 .lane-space-between {
-  display: flex;
-  justify-content: space-between;;
+    display: flex;
+    justify-content: space-between;;
 }
 
 .hidden {
-  display: none;
+    display: none;
+}
+
+.block {
+    display: block;
 }
 
 .canceller {
-  background:#ff614c;
+    background:#ff614c;
 }
 
 html {
@@ -114,6 +122,81 @@ body {
     margin: 0 auto;
 }
 
+/* ################################# MOBILES ################################# */
+
+/* ################################# HAMBURGER ################################# */
+
+.hamburger, #menu {
+  transition: all 0.5s;
+  -webkit-transition-timing-function: cubic-bezier(.79,.74,.33,1.21);
+}
+
+.hamburger {
+  position: fixed;
+  z-index: 5;
+  right: 0.75rem;
+  top: 0.75rem;
+  font-size: 2rem;
+  width: 3rem;
+  height: 3rem;
+  background: #332532;
+  text-align: center;
+  line-height: 3rem;
+  border: 0.25rem solid;
+  border-radius: 1rem;
+}
+
+.hamburger:focus {
+  background: #FFF;
+}
+
+#menu:target {
+  right: 0%;
+}
+
+#menu {
+  width: 100%;
+  height: 110%;
+  position: fixed;
+  z-index: 6;
+  top:0;
+  right: -100%;
+  background: #332532;
+  padding: 1rem;
+  box-sizing: border-box;
+  font-size: 1.5rem;
+}
+
+#menu ul {
+  margin: 0 0 1rem 0;
+}
+
+#menu ul:last-child {
+  width: 90%;
+  height: auto;
+  margin: 3rem auto;
+}
+
+#menu ul img {
+  width: 100%;
+}
+
+#menu a {
+  color:#FF974F;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#menu a:focus {
+  color:#FFF;
+}
+
+.menumap {
+  top:7rem;
+  right: 1rem;
+}
+
 /* ################################### HEADER ################################### */
 
 header, #header {
@@ -127,7 +210,7 @@ header, #header {
 header #longlogo {
     height: 100%;
     width: 50%;
-    margin: 0 auto;
+    margin: 0 0 0 2rem;
 }
 
 header #longlogo a img {
@@ -168,6 +251,7 @@ footer p a:focus {
   height: 100%;
   background:linear-gradient(45deg,#F77A52,#FF974F), url('../img/bg-map.png') center no-repeat;
   background-blend-mode: multiply;
+  background-position: bottom;
 }
 
 #hplogo {
@@ -206,7 +290,7 @@ footer p a:focus {
 .userbar {
   width: 80%;
   height: 3rem;
-  margin: 10% 0 0 0;
+  margin: 2% 0 0 0;
   font-size: 0;
 }
 
@@ -226,13 +310,20 @@ footer p a:focus {
   background:rgba(255,255,255,0.5);
 }
 
-.userbar a:first-child button {
+.userbar a.regbutton button {
   border-radius: 1rem 0 0 1rem;
 }
 
-.userbar a:last-child button {
+.userbar a.logbutton button {
   border-right:0.125rem solid #332532;
   border-radius: 0 1rem 1rem 0;
+}
+
+.userbar a.outbutton button {
+  border-radius: 1rem;
+  width: 100%;
+  margin: 0 auto;
+  border: 0.125rem solid #332532;
 }
 
 .downarrow {
@@ -429,7 +520,7 @@ form .inputbox label {
     transition: all 0.5s;
 }
 
-form .inputbox input, form .inputbox textarea, form .picspec {
+input, textarea, form .picspec {
     box-sizing: border-box;
     width: 100%;
     height: 2.5rem;
@@ -455,7 +546,7 @@ form .inputbox .filetitle {
     top:0.5rem;
 }
 
-form .inputbox textarea {
+textarea {
     resize:vertical;
     height: 7.5rem;
     padding: 1rem;
@@ -508,7 +599,7 @@ form .timetable .adddates {
     align-items: center;
     width: 100%;
     height: 3.5rem;
-    margin: 1rem 0;
+    margin: 1rem 0 0.5rem 0;
     color:#FFF;
     font-size: 1em;
     font-weight: 600;
@@ -528,6 +619,60 @@ form .timetable .adddates:focus {
 
 form .timetable .datesup{
     display:none;
+}
+
+#dateFirst {
+  margin: 1rem 0 0 0;
+}
+
+#dateFirst .lane-space-around {
+  margin: 0.5rem 0;
+}
+
+#dateFirst label {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+#dateFirst input[type=date] {
+  width: 70%;
+}
+
+#dateFirst input[type=time] {
+  width: 20%;
+}
+
+#dateFirst input, #dateinter input, #datesup input {
+  height: 1.5rem;
+  padding: 0.15rem;
+  margin: 0.25rem 0 0 0;
+  text-align: center;
+  border-radius: 0.5rem;
+}
+
+#dateinter input, #datesup input {
+  margin: 0 2%;
+}
+
+#dateinter input[type=time], #datesup input[type=time] {
+  width: 20%;
+}
+
+#dateinter input[type=date], #datesup input[type=date] {
+  width: 40%;
+}
+
+#dateinter hr {
+  margin: 0.5rem auto;
+  width: 75%;
+  border: 0.1rem dotted #B58B94;
+}
+
+#dateinter label, #datesup label {
+  font-size: 1.25rem;
+  margin: 0.25rem 0 0.25rem 0;
+  display: flex;
+  justify-content: center;
 }
 
 form .nbplaces {
@@ -550,7 +695,6 @@ form .inputbox .picfile {
 }
 
 .alert {
-    display:none;
     position: relative;
     border-radius: 1rem;
     margin: 1rem 0 0 0;
@@ -627,6 +771,8 @@ input[type=submit]:focus, #send_position:focus, button:focus {
     font-weight: 600;
     color:#332532;
     border: none;
+    border-radius: 0;
+    background:#FFF;
     margin: 0 0.25rem;
 }
 
@@ -640,8 +786,9 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 
 #header #result_search {
     width: 90%;
-    height: auto;
-    margin: 2rem auto;
+    max-height: 21rem;
+    overflow: hidden;
+    margin: 0.5rem auto;
 }
 
 #header #result_search .searchresult {
@@ -650,14 +797,16 @@ input[type=submit]:focus, #send_position:focus, button:focus {
     font-size: 1rem;
     text-align: left;
     padding: 0 0 0 1rem;
-    color:#212121;
-    border:0.125rem solid #b58b94;
+    color:#FFF;
+    margin: 0.25rem 0;
+    border:0.125rem solid #FFF;
     border-radius: 1rem;
-    background:#FFF;
+    background:#F77A52;
 }
 
 #header #result_search .searchresult:nth-child(even) {
-    background:#e6e6e6;
+    background: #FFF;
+    color: #332532;
 }
 
 #header #result_search .searchresult:focus {
@@ -673,10 +822,11 @@ input[type=submit]:focus, #send_position:focus, button:focus {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 4;
     color:#332532;
     font-size: 2rem;
     background-color: #e6e6e6;
+    transition: all 0.5s;
 }
 
 #event_view a {
@@ -692,8 +842,8 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   right: 1rem;
   z-index: 5;
   background: #332532;
-  width: 3rem;
-  height: 3rem;
+  width: 3.5rem;
+  height: 3.5rem;
   border: 0.25rem solid #FFF;
   border-radius: 1rem;
   color: #FFF;
@@ -704,7 +854,7 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   background:#ff614c;
 }
 
-.eventview-header {
+.eventview-header, .eventpage-header {
   width: 100%;
   height: 24rem;
   position: relative;
@@ -728,16 +878,18 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 .eventview-header h1 {
   top: 15%;
   left: 10%;
+  font-size:2rem;
   text-transform: capitalize;
 }
 
 .eventview-header p {
   top: 36.5%;
   left: 10%;
+  font-size: 1.5rem;
 }
 
 .eventview-header p:nth-child(2) {
-  top: 51.5%;
+  top: 47.5%;
   left: 10%;
 }
 
@@ -759,7 +911,6 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   height: 4rem;
   width: 40%;
   margin: 0;
-  bottom: 0.25rem;
   font-size: 1rem;
   color: #FFF;
   border: 0.25rem solid #FFF;
@@ -773,7 +924,7 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 
 .eventview-header .eventview-interact .rating {
   right: 10%;
-  bottom: 1rem;
+  top: 1rem;
   color: #FFF;
   font-size: 1.5rem;
   letter-spacing: 0.5rem;
@@ -853,7 +1004,6 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   color: #FFF;
   background: #332532;
   text-align: center;
-  margin: 0 0 0.5rem 0
 }
 
 .eventview-comments .comment {
@@ -868,31 +1018,36 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 
 .eventview-comments .comment h3 {
   font-size: 1.5rem;
-  text-indent: 2rem;
+  text-indent: -0.5rem;
 }
 
 .eventview-comments .comment .comment-content {
-  background: #e4d6d9;
+  border: 0.1rem dotted #332532;
   padding: 0.5rem;
   border-radius: 1rem;
   margin: 0.5rem 0 0 0;
 }
 
-/* ################################ EVENT :: PAGE ################################ */
-
-.eventpage-header {
-  height: 18rem;
+.eventview-comments .comment .answer {
+  margin: 0 0 0 1rem;
 }
+
+.eventview-comments .comment .answer .answer-content{
+  margin: 0.5rem 0 0 0;
+}
+
+/* ################################ EVENT :: PAGE ################################ */
 
 .eventpage-header-lane {
   bottom:1.5rem;
 }
 
 #add_comment {
+  width: 90%;
   font-size: 1.25rem;
   height: 4rem;
   background: #F77A52;
-  margin: 0 0 1rem 0;
+  margin: 1rem 5% 0 5%;
 }
 
 #add_comment:focus {
@@ -904,6 +1059,26 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   margin: 0.5rem 0 0 0;
   height: 2rem;
   font-size: 1rem;
+}
+
+#add_new_comment {
+  margin: 0 0.5rem 0.5rem 0.5rem;
+  padding: 0.5rem;
+  transition: all 0.5s;
+}
+
+#add_new_comment label {
+
+}
+
+#add_new_comment input, #add_new_comment textarea {
+  margin: 0.25rem 0;
+}
+
+#submitCom {
+  height: 3rem;
+  font-size: 1.25rem;
+  background: #F77A52;
 }
 
 /* ################################ CREATE :: MAP ################################ */
@@ -935,4 +1110,35 @@ input[type=submit]:focus, #send_position:focus, button:focus {
     left:50%;
     width: 90%;
     z-index: 1;
+}
+
+/* ############################## TABLETTES ############################## */
+
+@media (min-width: 426px) {
+
+/* ############################## HP ############################## */
+
+#hplogo {
+    width: 100%;
+    height: 50%;
+}
+
+#hplogo img {
+    width: auto;
+    height: 75%;
+}
+
+#go {
+    width: 30%;
+    height: 10rem;
+}
+
+.userbar {
+  margin: 5% 0 0 0;
+}
+
+.downarrow {
+    margin: 5% 0 0 0;
+}
+
 }
